Fix overflow on Nav when the screen is narrow

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ nav {
     background-color: var(--bg-color);
     grid-row: 1 / 3;
     grid-column: 1 / 2;
-    
+    overflow-x: hidden;
     height: 100vh;
 
 }
@@ -344,6 +344,7 @@ aside {
     row-gap: 0.5rem;
     display: grid;
     grid-template-rows: auto auto 1fr;
+    
 
 
 
